WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105365
DFG::SpeculativeJIT::jumpSlowForUnwantedArrayMode incorrectly checks for non-array array storage when it should be checking for array array storage
https://bugs.webkit.org/show_bug.cgi?id=105365
Summary
DFG::SpeculativeJIT::jumpSlowForUnwantedArrayMode incorrectly checks for non-...
Filip Pizlo
Reported
2012-12-18 16:29:50 PST
Patch forthcoming.
Attachments
the patch
(33.05 KB, patch)
2012-12-18 16:31 PST
,
Filip Pizlo
mhahnenberg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-12-18 16:31:02 PST
Created
attachment 180053
[details]
the patch
Mark Hahnenberg
Comment 2
2012-12-18 16:33:37 PST
Comment on
attachment 180053
[details]
the patch r=me
Filip Pizlo
Comment 3
2012-12-18 16:34:35 PST
Landed in
http://trac.webkit.org/changeset/138086
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug