DFG::SpeculativeJIT::jumpSlowForUnwantedArrayMode incorrectly checks for non-array array storage when it should be checking for array array storage https://bugs.webkit.org/show_bug.cgi?id=105365

Reviewed by Mark Hahnenberg.

Source/JavaScriptCore:

* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::jumpSlowForUnwantedArrayMode):

LayoutTests:

* fast/js/dfg-ensure-array-storage-on-window-expected.txt: Added.
* fast/js/dfg-ensure-array-storage-on-window.html: Added.
* fast/js/indexed-setter-on-global-object-expected.txt: Added.
* fast/js/indexed-setter-on-global-object.html: Added.
* fast/js/script-tests/dfg-ensure-array-storage-on-window.js: Added.
(foo):
* fast/js/script-tests/indexed-setter-on-global-object.js: Added.



Canonical link: https://commits.webkit.org/123590@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138086 268f45cc-cd09-0410-ab3c-d52691b4dbfc